--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,112 @@
-gunicorn
-asgiref==3.5.2
-Django==4.1.1
-Pillow==9.2.0
-sqlparse==0.4.3
-tzdata==2022.4
+absl-py==1.3.0
+appdirs==1.4.4
+arabic-reshaper==2.1.4
+asgiref==3.3.0
+asn1crypto==1.5.1
+astroid==2.5.3
+astunparse==1.6.3
+autopep8==1.4.4
+beautifulsoup4==4.11.1
+bs4==0.0.1
+cachetools==5.2.0
+certifi==2022.9.14
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.4
+cryptography==38.0.1
+cssselect2==0.7.0
+defusedxml==0.6.0
+distlib==0.3.6
+Django==3.1.14
+django-allauth==0.39.1
+django-ckeditor==5.8.0
+django-countries==5.3.3
+django-crispy-forms==1.7.2
+django-debug-toolbar==1.10.1
+django-js-asset==1.2.2
+django-widget-tweaks==1.4.8
+djangorestframework==3.13.1
+filelock==3.8.0
+flatbuffers==22.10.26
+future==0.18.2
+gast==0.4.0
+google-auth==2.14.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.50.0
+gunicorn==20.1.0
+h5py==3.7.0
+html5lib==1.1
+idna==3.4
+imutils==0.5.4
+isort==5.8.0
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+lazy-object-proxy==1.6.0
+libclang==14.0.6
+lxml==4.9.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+mccabe==0.6.1
+mysql-connector-python==8.0.29
+numpy==1.23.4
+oauthlib==3.0.1
+opt-einsum==3.3.0
+oscrypto==1.3.0
+packaging==21.3
+pep8==1.7.1
+Pillow==9.0.1
+platformdirs==2.5.2
+protobuf==3.19.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pycparser==2.21
+pyHanko==0.15.0
+pyhanko-certvalidator==0.19.5
+PyJWT==2.6.0
+pylint==2.7.4
+pyparsing==3.0.9
+PyPDF3==1.0.6
+python-bidi==0.4.2
+python-decouple==3.1
+python3-openid==3.1.0
+pytz==2019.3
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+qrcode==7.3.1
+reportlab==3.6.11
+requests==2.28.1
+requests-oauthlib==1.2.0
+rsa==4.9
+scipy==1.9.3
+six==1.16.0
+sklearn==0.0.post1
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+sqlparse==0.3.0
+stripe==2.27.0
+svglib==1.4.1
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.27.0
+termcolor==2.1.0
+tinycss2==1.2.1
+toml==0.10.2
+tqdm==4.64.1
+typing_extensions==4.4.0
+tzdata==2022.1
+tzlocal==4.2
+uritools==4.0.0
+urllib3==1.26.12
+virtualenv==20.16.5
+webencodings==0.5.1
+Werkzeug==2.2.2
 whitenoise==6.2.0
+wrapt==1.12.1
+xhtml2pdf==0.2.8
